# mamimo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
mamimo/: __init__.py  analysis.py  carryover.py  linear_model.py  saturation.py  time_utils.py
mamimo/datasets/: __init__.py  _load_fake_mmm.py
mamimo/datasets/data/: mmm.csv
skmmm/: saturation.py  smoothing.py
tests/: __init__.py  test_analysis.py  test_carryover.py  test_linear_model.py  test_saturation.py  test_scikit_mmm.py  test_smoothing.py
