[tool.poetry]
name = "mamimo"
version = "0.2.5"
description = "A package to compute a marketing mix model."
authors = ["Garve <xgarve@gmail.com>"]
repository = "https://github.com/Garve/mamimo"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
numpy = "^1.22.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pre-commit = "^2.18.1"
pydocstyle = "^6.1.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"